--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="desconto">
-        <p>Desconto de  20%</p>
+        <p class="pdesconto">Desconto de  20%</p>
     </div>
 
     <div class="super">
