--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
     </div>
 
     <div class="super">
-        <h1>Super-heróis</h1>
+        <h1 class="psuper">Super-heróis</h1>
     </div>
 
     <div class="cards">
         <div class="batman">
-            homem morcego
+            <img src="img/love.svg" alt="curti" class="love">
+            <img src="img/capa.svg" alt="capa" class="capa">
+            <img src="img/perfil.svg" alt="perfil" class="perfil">
+           <h2 class="nbat">Batman</h2>
+            <p class="descbat">Bruce Wayne é o único personagem a se identificar como Batman e aparece em Batman, Detective Comics, Batman e Robin e Batman: O Cavaleiro das Trevas. Dick Grayson retorna ao manto de Asa Noturna
+            </p>
+            <button class="vermais">Ver mais</button>
         </div>
 
         <div class="alerquina">
-            mulher maluca
+            <img src="img/love.svg" alt="curti" class="love1">
+            <img src="img/capa1.png" alt="capa" class="capa1">
+            <img src="img/perfil1.svg" alt="perfil" class="perfil1">
+            <h2 class="naler">Alerquina</h2>
+            <p class="descale">A criação de Arlequina foi uma ideia de última hora proposta pelo escritor americano Paul Dini para modificar uma cena do vigésimo segundo episódio de Batman: The Animated Series.
+            </p>
+            <button class="vermais1">Ver mais</button>
         </div>
     </div>
-    <!-- roda pe ↓ -->
     <footer class="footer">
-        roda pe
+        <p class="pfooter">Todos os direitos reservados a Front-end I</p>
     </footer>
 </body>
 </html>
